--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,27 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
+
+buildscript {
+    ext {
+        kotlin_version = '1.4.10'
+        archLifecycleVersion = '1.1.1'
+        gradleVersion = '4.1.0'
+        supportlibVersion = '1.2.0'
+        dataBindingCompilerVersion = gradleVersion // Always need to be the same.
+        navigationVersion = "2.3.0"
+    }
+    repositories {
+        google()
+        jcenter()
+    }
+    dependencies {
+        classpath "com.android.tools.build:gradle:$gradleVersion"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.6.10"
+
+
+        // NOTE: Do not place your application dependencies here; they belong
+        // in the individual module build.gradle files
+    }
+}
 plugins {
     id 'com.android.application' version '7.1.2' apply false
     id 'com.android.library' version '7.1.2' apply false
