--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,8 @@ buildscript {
         classpath "com.android.tools.build:gradle:$gradleVersion"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.6.10"
 
+        classpath 'com.google.gms:google-services:4.3.10'
+
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
