--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,6 +2,8 @@ plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
     id 'com.google.gms.google-services'
+    id 'kotlin-android'
+    id 'kotlin-android-extensions'
 }
 
 android {
@@ -51,6 +53,8 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
     implementation 'me.zhanghai.android.materialprogressbar:library:1.6.1'
+
+    implementation 'de.hdodenhof:circleimageview:3.1.0'
 
     implementation platform('com.google.firebase:firebase-bom:29.3.1')
 
